--- a/package.json
+++ b/package.json
@@ -7,23 +7,25 @@
     "slicemachine": "start-slicemachine"
   },
   "dependencies": {
-    "@prismicio/client": "^6.7.1",
-    "@prismicio/helpers": "^2.3.3",
+    "@prismicio/client": "^6.7.3",
+    "@prismicio/helpers": "^2.3.8",
     "@prismicio/next": "^0.1.5",
-    "@prismicio/react": "^2.5.0",
-    "@prismicio/slice-simulator-react": "^0.2.2",
-    "@prismicio/types": "^0.2.3",
+    "@prismicio/react": "^2.5.1",
+    "@prismicio/slice-simulator-react": "^0.2.3",
+    "@prismicio/types": "^0.2.7",
     "classnames": "2.3.2",
     "next": "latest",
     "prismic-ts-codegen": "^0.1.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-slick": "^0.29.0"
   },
   "devDependencies": {
-    "autoprefixer": "10.4.10",
-    "postcss": "8.4.16",
-    "slice-machine-ui": "^0.4.2",
-    "tailwindcss": "^3.1.8",
+    "@types/react": "18.0.26",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "slice-machine-ui": "^0.6.0",
+    "tailwindcss": "^3.2.7",
     "typescript": "^4.8.3"
   }
 }
