--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prismicio/react": "^2.6.2",
     "@prismicio/slice-simulator-react": "^0.2.3",
     "@prismicio/types": "^0.2.7",
+    "@types/gtag.js": "^0.0.12",
     "classnames": "2.3.2",
     "lodash": "^4.17.21",
     "next": "latest",
